Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.10, 6.3
-
iPadOS 16 on M1, XCode 14
-
-
2da738f03 (dev), 5195c6683 (6.7), 0b70ca278 (6.6), a43d76dcf (tqtc/lts-6.5)
Description
When moving a QML app from the iPad's screen to the external monitor (via iPadOS "..." button), the UI is too small and there's a large black area.
How to reproduce
1. Connect iPad to an external monitor
2. Launch any QML app on the iPad's screen
3. Tap the top center "..." button and tap "Move to Display"
Attachments
Issue Links
- relates to
-
QTBUG-106701 Crash with any QML app on external display with iPadOS 16.1 on M1 iPad
- Closed