iOS: Reflect screen changes to QWindows when view controller moves screen

On modern iOS QUIWindow and QIOSViewController is not tied to the screen
it was created on/for, as the window scene can move between the internal
screen and any external screens.

We now pick this up via the scene's update callback, as documented, and
reflect the new screen to all top level windows on the original screen.

Fixes: QTBUG-106709
Pick-to: 6.8
Change-Id: If4a2de1eec13de21fa6f2f4aecfccda345c49b16
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 4b03677f9d6417b44806cf7f6cef76590914963e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit a78334dbc6c8036a2f719464e7e56673fb170026)
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>